[package]
name = "zeronet_protocol"
version = "0.1.1"
authors = ["Ansho Rei <anshorei@zeroid.bit>"]
edition = "2018"
description = "Async ZeroNet Protocol implementation in Rust"
documentation = "http://localhost:43110/1H3ct93gHL9BgtTnyrqJrkjn4NdociFFTn/doc/zeronet_protocol"
readme = "README.md"
homepage = "http://localhost:43110/1H3ct93gHL9BgtTnyrqJrkjn4NdociFFTn"
repository = "http://localhost:43110/1H3ct93gHL9BgtTnyrqJrkjn4NdociFFTn"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"
rmp-serde = "0.14"
rmpv = "0.4"
rmp = "0.8.9"
tokio = { version = "0.2.21", features = ["tcp", "dns"] }
futures = "0.3.5"
base64 = "*"
koibumi-base32 = "*"
itertools = "*"
