[package]
name = "zeronet_protocol"
version = "0.1.7"
authors = ["Ansho Rei <anshorei@zeroid.bit>"]
edition = "2018"
description = "Async ZeroNet Protocol implementation in Rust"
documentation = "http://localhost:43110/1H3ct93gHL9BgtTnyrqJrkjn4NdociFFTn/doc/zeronet_protocol"
readme = "README.md"
homepage = "http://localhost:43110/1H3ct93gHL9BgtTnyrqJrkjn4NdociFFTn"
repository = "http://localhost:43110/1H3ct93gHL9BgtTnyrqJrkjn4NdociFFTn"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"
rmp-serde = "0.15"
rmpv = "0.4"
rmp = "0.8"
tokio = { version = "1.1" }
futures = "0.3"
base64 = "0.13"
koibumi-base32 = "0.0.2"
itertools = "0.10"
thiserror = "1.0"
