[package]
name = "zeronet_protocol"
version = "0.1.9"
authors = ["Ansho Rei <anshorei@protonmail.com>"]
edition = "2018"
description = "Async ZeroNet Protocol implementation in Rust"
documentation = "http://www.github.com/Anshorei/zeronet_protocol"
readme = "README.md"
homepage = "http://www.github.com/Anshorei/zeronet_protocol"
repository = "http://www.github.com/Anshorei/zeronet_protocol"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"
rmp-serde = "1.0.0"
rmpv = "1.0"
rmp = "0.8"
tokio = { version = "1.5" }
futures = "0.3"
base64 = "0.13"
koibumi-base32 = "0.0.2"
itertools = "0.10"
thiserror = "1.0"

i2p = { version = "0.0.1", optional = true }
tor = { version = "0.1", optional = true }
